@@ -15,7 +15,6 @@ import com.powsybl.iidm.network.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -40,35 +39,7 @@ public class ContingencyContainerImpl implements ContingencyContainer {
         if (identifiable == null) {
             throw new PowsyblException("Element '" + elementId + "' not found");
         }
-        if (identifiable instanceof Line) {
-            return new LineContingency(elementId);
-        } else if (identifiable instanceof TwoWindingsTransformer) {
-            return new TwoWindingsTransformerContingency(elementId);
-        } else if (identifiable instanceof HvdcLine) {
-            return new HvdcLineContingency(elementId);
-        } else if (identifiable instanceof BusbarSection) {
-            return new BusbarSectionContingency(elementId);
-        } else if (identifiable instanceof Generator) {
-            return new GeneratorContingency(elementId);
-        } else if (identifiable instanceof DanglingLine) {
-            return new DanglingLineContingency(elementId);
-        } else if (identifiable instanceof StaticVarCompensator) {
-            return new StaticVarCompensatorContingency(elementId);
-        } else if (identifiable instanceof ShuntCompensator) {
-            return new ShuntCompensatorContingency(elementId);
-        } else if (identifiable instanceof ThreeWindingsTransformer) {
-            return new ThreeWindingsTransformerContingency(elementId);
-        } else if (identifiable instanceof Load) {
-            return new LoadContingency(elementId);
-        } else if (identifiable instanceof Battery) {
-            return new BatteryContingency(elementId);
-        } else if (identifiable instanceof Switch) {
-            return new SwitchContingency(elementId);
-        } else if (identifiable instanceof TieLine) {
-            return new TieLineContingency(elementId);
-        } else {
-            throw new PowsyblException("Element type not supported: " + identifiable.getClass().getSimpleName());
-        }
+        return ContingencyElementFactory.create(identifiable);
     }
 
     protected List<Contingency> createContingencies(Network network) {
@@ -78,14 +49,10 @@ public class ContingencyContainerImpl implements ContingencyContainer {
             if (Files.exists(pathToContingencyJsonFile)) {
                 ContingencyList contingenciesList;
                 contingenciesList = ContingencyList.load(pathToContingencyJsonFile);
-
-                for (Contingency contingency : contingenciesList.getContingencies(network)) {
-                    contingencies.add(new Contingency(contingency.getId(), contingency.getElements()));
-                }
+                contingencies.addAll(contingenciesList.getContingencies(network));
             } else {
                 throw new PowsyblException("File not found: " + pathToContingencyJsonFile);
             }
-
         }
 
         for (Map.Entry<String, List<String>> e : elementIdsByContingencyId.entrySet()) {
@@ -93,7 +60,7 @@ public class ContingencyContainerImpl implements ContingencyContainer {
             List<String> elementIds = e.getValue();
             List<ContingencyElement> elements = elementIds.stream()
                     .map(elementId -> createContingencyElement(network, elementId))
-                    .collect(Collectors.toList());
+                    .toList();
             contingencies.add(new Contingency(contingencyId, elements));
         }
         return contingencies;
